
add_library(${CMAKE_PROJECT_NAME}-static STATIC ${TARGET_PROJECT_SOURCES})

target_compile_definitions(${CMAKE_PROJECT_NAME}-static PUBLIC ${TARGET_DEFINITIONS})

target_link_libraries( ${CMAKE_PROJECT_NAME}-static ${TARGET_LIBRARIES})
set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY INCLUDE_DIRECTORIES ${TARGET_INCLUDE_DIRS})
set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY OUTPUT_NAME "${TARGET_EXECUTABLE_NAME}")
set_property(TARGET ${CMAKE_PROJECT_NAME}-static PROPERTY XCODE_ATTRIBUTE_PRODUCT_NAME ${TARGET_EXECUTABLE_NAME})

install(TARGETS ${CMAKE_PROJECT_NAME}-static EXPORT ${CMAKE_PROJECT_NAME}Targets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION archive
    RUNTIME DESTINATION bin)

set(INCLUDE_FILES "")
foreach(include_dir ${TARGET_INCLUDE_DIRS})
    set(_INCLUDE_FILES "")
    file(GLOB _INCLUDE_FILES ${include_dir}/*.h*)
    list(APPEND INCLUDE_FILES ${INCLUDE_FILES})
endforeach()

install(FILES ${INCLUDE_FILES} DESTINATION include/${CMAKE_PROJECT_NAME})
